--- a/.env
+++ b/.env
@@ -1,13 +1,11 @@
-# Copy from .env.local on the Vercel dashboard
-# https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL="postgres://default:jIQc8szm9HPq@ep-still-feather-a4kl0dvt-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:jIQc8szm9HPq@ep-still-feather-a4kl0dvt-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:jIQc8szm9HPq@ep-still-feather-a4kl0dvt-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:jIQc8szm9HPq@ep-still-feather-a4kl0dvt.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-still-feather-a4kl0dvt-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="jIQc8szm9HPq"
-POSTGRES_DATABASE="verceldb"
+
+DATABASE_PASSWORD="NQNIAR6imNQdl4dA"
+DATABASE_URL="postgres://postgres.zlcopnxrlylaozckfycv:NQNIAR6imNQdl4dA@aws-0-us-west-1.pooler.supabase.com:5432/postgres"         
+
+CLOUD_NAME= 'dushaphlg', 
+API_KEY= '256744482432874', 
+API_SECRET= 'XBLcABPQR-b9VqQr9Sf_Vi0-gLE' 
+
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
