--- a/package.json
+++ b/package.json
@@ -16,22 +16,31 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.3",
     "clsx": "^2.0.0",
+    "express": "^4.19.2",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.6",
-    "next": "^14.0.2",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.1.4",
+    "pdf-lib": "^1.17.1",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "prisma": "^5.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animated": "^1.0.1",
+    "ts-runtime": "^0.3.0",
     "typescript": "5.2.2",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.14",
+    "@types/multer": "^1.4.11",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.14",
     "@vercel/style-guide": "^5.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
